fix: increase z-index of dialog-box and turn action button (css 3d gameboard)

--- a/apps/gameboard-3d/src/style.css
+++ b/apps/gameboard-3d/src/style.css
@@ -848,7 +848,6 @@ body {
   padding: 2vw 3vw;
   position: absolute;
   z-index: 3000;
-  z-index: 10;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
